--- a/style.css
+++ b/style.css
@@ -63,8 +63,20 @@ h1 {
     height: 120px;
     border-radius: 3px;
     margin: 0px auto 20px;
-    background-color: white;
+    background-color: #e0e0e0;
     box-shadow: inset 0 0 10px black;
+}
+
+#calc-display ul  {
+    list-style: none;
+    display: flex;
+    font-family: 'VT323', monospace;
+    letter-spacing: -8px;
+    font-size: 100px;
+    justify-content: space-between;
+    position: relative;
+    top: 20px;
+    margin-right: 10px;
 }
 
 #display-p {
