--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ h1 {
 }
 
 #calc-display {
-    position: relative;
     width: 85%;
     height: 120px;
     border-radius: 3px;
@@ -67,27 +66,23 @@ h1 {
     box-shadow: inset 0 0 10px black;
 }
 
-#calc-display ul  {
+#calc-display ul {
     list-style: none;
     display: flex;
     font-family: 'VT323', monospace;
     letter-spacing: -8px;
     font-size: 100px;
     justify-content: space-between;
-    position: relative;
-    top: 20px;
-    margin-right: 10px;
+    padding: 0 15px 0 5px;
 }
 
-#display-p {
+#result {
+    height: 25px;
+    width: 100%;
     font-family: 'VT323', monospace;
-    font-size: 40px;
-    display: inline-block;
-    text-align: left;
-    vertical-align: middle;
-    margin: 0 20px 10px;
-    position: relative;
-    top: 60px;
+    font-size: 35px;
+    text-align: right;
+    padding-right: 10px;
 }
 
 #calc-btns {
